--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-
     <style name="Theme.Ozem" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Mesmas cores, só um pouco mais escuras no dark -->
-        <item name="colorPrimary">@color/emerald_primary_dark</item>
-        <item name="colorPrimaryVariant">@color/emerald_primary_dark</item>
-        <item name="colorOnPrimary">@color/emerald_on_primary</item>
+        <item name="colorPrimary">@color/ozem_primary</item>
+        <item name="colorPrimaryVariant">@color/black</item>
+        <item name="colorOnPrimary">@color/black</item>
 
-        <item name="colorSecondary">@color/emerald_primary_dark</item>
-        <item name="colorOnSecondary">@color/emerald_on_primary</item>
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorOnSecondary">@color/black</item>
 
-        <item name="android:colorBackground">@color/black</item>
-        <item name="colorSurface">@color/emerald_primary_dark</item>
+        <item name="android:statusBarColor">?attr/colorSurface</item>
 
-        <item name="android:statusBarColor">@color/black</item>
         <item name="android:textColorPrimary">@color/white</item>
+        <item name="colorSurface">#121212</item> <item name="colorOnSurface">@color/white</item>
+        <item name="android:windowBackground">#121212</item>
     </style>
-
 </resources>
